# CS3820-Project

./: .devcontainer.json  .gitattributes  Logic.cabal  test.sh  testEval.sh  testLib.sh
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
eval-tests/atom-terms/: atom1.l.out  atom1.l.uout  atom2.l  atom2.l.out  atom2.l.uout  atom3.l  atom3.l.uout
eval-tests/compound-terms/: compound1.l  compound1.l.out  compound1.l.uout  compound2.l  compound2.l.out  compound2.l.uout
eval-tests/lists/: list1.l  list1.l.out  list1.l.uout  list2.l  list2.l.out  list2.l.uout
eval-tests/naturals/: nat1.l.out  nat1.l.uout  nat2.l.out  nat2.l.uout
eval-tests/rules/: rule1.l  rule1.l.out  rule1.l.uout  rule2.l.out  rule2.l.uout  rule3.l  rule3.l.out  rule4.l.out  tests1.l  tests1.l.uout  tests2.l.out  tests3.l  tests3.l.uout  tests4.l.uout
eval-tests/simple-queries/: simpleq1.l  simpleq2.l  simpleq2.l.out  simpleq3.l.out  simpleq3.l.uout  simpleq4.l  simpleq4.l.out  simpleq4.l.uout  simpleq5.l  simpleq5.l.out
eval-tests/simple-rules/: simple2.l  simple3.l  simple4.l  simple5.l
eval-tests/vars/: var1.l  var1.l.out  var1.l.uout  var2.l.out  var2.l.uout  var3.l.out  var3.l.uout  var4.l.out  var5.l.out
lib-tests/arith/: addi1.l  addi1.l.out  addi2.l  addi2.l.out  addi3.l  addi3.l.out  addi4.l  addi4.l.out  addn1.l  addn1.l.out  addn2.l  addn2.l.out  addn3.l  addn3.l.out  addn4.l  addn4.l.out  addn5.l  addn5.l.out  eqi1.l  eqi1.l.out  eqi2.l  eqi2.l.out  eqi3.l  eqi3.l.out  eqi4.l  (+21 more)
parse-tests/: pfft.hs
src/: Main.hs
tests/: lam.l  tests2.l  tests4.l
(+61 files in other folders)
